# llm-tools-searxng

./: .gitignore  LICENSE  README.md  llm_tools_searxng.py  pyproject.toml
.github/workflows/: test.yml
tests/: test_searxng.py
