[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-tools-searxng"
version = "0.1.0"
description = "LLM plugin that exposes a searxng_search tool backed by a self-hosted SearXNG instance"
readme = "README.md"
authors = [{ name = "Vanessa Beck", email = "vanessa.beckk1@gmail.com" }]
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
    "llm>=0.26",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/vanessabeck/llm-tools-searxng"
Changelog = "https://github.com/vanessabeck/llm-tools-searxng/releases"
Issues = "https://github.com/vanessabeck/llm-tools-searxng/issues"

[project.entry-points.llm]
tools_searxng = "llm_tools_searxng"
